terraform-k8s/products/product-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: iac-learning
spec:
  type: NodePort
  selector:
    app: product-app
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
