terraform-k8s/products/product-app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: iac-learning
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: product.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: product-service
            port: 
              number: 8080
